# VeghFruzsi

opencv1-project/: CMakeLists.txt  image_bluring.cpp  image_bluring.h  main.cpp
week 1-2/day01/hello-world/: kutya
week 1-2/day02/06_codinghours/: main.cpp
week 1-2/day02/07_favoritenumber/: CMakeLists.txt  main.cpp
week 1-2/day02/08_swap/: main.cpp
week 1-2/day02/10_define_basic_info/: main.cpp
week 1-2/day02/13_second_in_a_day/: CMakeLists.txt  main.cpp
week 1-2/day02/15_mile_to_km/: main.cpp
week10/day02/: main.c
week10/day04/: main.c
week5/01_greenfox/: CMakeLists.txt  cohort.cpp  cohort.h  main.cpp  mentor.cpp  mentor.h  person.cpp  person.h  sponsor.cpp  sponsor.h  student.cpp  student.h
week5/02_instrument/: CMakeLists.txt  bassguitar.cpp  bassguitar.h  electricguitar.cpp  electricguitar.h  instrument.cpp  instrument.h  main.cpp  stringedinstrument.cpp  stringedinstrument.h  violin.cpp  violin.h
week5/04_SUM/: CMakeLists.txt
week6/01_garden_pplication/: CMakeLists.txt  flower.cpp  flower.h  garden.cpp  garden.h  main.cpp  plant.cpp  plant.h  tree.cpp  tree.h
week6/02_zoo/: CMakeLists.txt  animal.cpp  animal.h  bird.cpp  bird.h  main.cpp  mammal.cpp  mammal.h  reptile.cpp  reptile.h
week6/postit/: CMakeLists.txt  postit.cpp  postit.h
week7/01_hellome/: main.c
week7/03_introduceyourself/: main.c
week7/04_twonumbers/: main.c
week7/05_cuboid/: CMakeLists.txt  main.c
week7/06_guessthenumber/: CMakeLists.txt  main.c
week7/08_equal/: main.c
week8/DOJO_Poker/: CMakeLists.txt
week9/day01/: main.c
week9/day02/: main.c
(+382 files in other folders)
